--- a/app/src/main/res/layout/activity_pay_bank_card_add.xml
+++ b/app/src/main/res/layout/activity_pay_bank_card_add.xml
@@ -11,8 +11,8 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:fillViewport="true"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
         <LinearLayout
 
@@ -50,6 +50,7 @@
                     android:hint="请输入持卡人姓名"
                     android:maxLength="30"
                     android:singleLine="true"
+                    android:textCursorDrawable="@drawable/common_edit_input_line"
                     android:textSize="12sp" />
             </LinearLayout>
 
@@ -77,6 +78,7 @@
                     android:hint="请输入开卡时银行预留手机号"
                     android:maxLength="30"
                     android:singleLine="true"
+                    android:textCursorDrawable="@drawable/common_edit_input_line"
                     android:textSize="12sp" />
             </LinearLayout>
 
@@ -93,7 +95,7 @@
                     android:text="卡类型"
                     android:textColor="@color/color_333333" />
 
-                <EditText
+                <TextView
                     android:id="@+id/bankType"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -113,7 +115,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="1dp"
                 android:background="@color/white"
-                android:padding="15dp">
+                android:padding="15dp"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -157,6 +160,7 @@
                     android:hint="请输入卡号"
                     android:maxLength="30"
                     android:singleLine="true"
+                    android:textCursorDrawable="@drawable/common_edit_input_line"
                     android:textSize="12sp" />
             </LinearLayout>
 
